feat: API routes (#400)
* feat(api-route): Add examples API routes to examples/boilerplate

* feat(api-route): Add type declarations of API routes feature

* feat(api-route): Add example API route middleware in example/boilerplate

* feat(api-route): Generate tmpFiles of API routes on `umi build`

* feat(api-route): Move api directory to "src/api" instead of "src/pages/api"

* feat(api-route): Fix CI failed due to new example without update lock file

* feat(api-route): Bundle generated files into final result for Vercel serverless function

* feat(api-route): Change api route bundle output dir to ".output/server/pages/api"

* feat(api-route): Add UmiApiRequest and UmiApiResponse

* feat(api-route): Remove dynamic route from api-route-demo since it is not support currently

* feat(api-route): Update gitignore path from "examples/*/api" to "examples/*/.output"

* feat(api-route): Encapsulate api-route into a feature of preset-umi and add configuration

* feat(api-route): "Import type instead of just import

Co-authored-by: Yingci <59400654+fz6m@users.noreply.github.com>

* feat(api-route): Use English in warning messages

* feat(api-route): Improve path expressions

* feat(api-route): Move config checking into api.describe.enableBy

* feat(api-route): Add API route adapter for Umi Dev Server (`umi dev`)

* feat(api-route): Add esbuild plugin to ignore path prefix "@fs"

* feat(api-route): Fix CI failed due to lock file problem

* feat(api-route): Fix CI failed due to lock file problem

* feat(api-route): Fix CI failed due to lock file problem

* feat(api-route): Fix build failed due to recursive import

* feat(api-route): Fix API route match problem with trailing slash

* feat(api-route): Watch API route file changes in dev mode

* feat(api-route): Add some API route example usages

* feat(api-route): Remove unused function in bundler-esbuild

Co-authored-by: Yingci <59400654+fz6m@users.noreply.github.com>
Co-authored-by: chencheng (云谦) <sorrycc@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /examples/*/.mfsu
 /examples/*/.umi
 /examples/*/.umi-production
+/examples/*/.output
 /examples/*/.umi-test
 /examples/*/src/.umi
 /examples/*/src/.umi-production
