--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "jest": "^27.5.1",
     "lerna": "^4.0.0",
     "lint-staged": "^12.3.4",
+    "matcher": "^5.0.0",
     "only-allow": "^1.1.0",
     "prettier": "^2.5.1",
     "prettier-plugin-organize-imports": "^2.3.4",
