build: support turbo build flow  (#425)
* example: add package `name` for all examples project

* chore(test): rename `test` dir name to `testing` for match

* example: set all example as private package

* chore(test): remove `test` pkg file

* ci: add `examples/*` package json check

* ci: use `turbo` instead pnpm exec

* ci(turbo): add turbo cache for github actions

* ci: fix node version and set expires mark step name

* example: add new repo name

* chore: update lock file

* ci: force check turbo perf

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,18 +19,20 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        node_version: [14.x, 16.x]
+        node-version: [14.x, 16.x]
         os: [ubuntu-latest, macos-latest, windows-latest]
       fail-fast: false
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: Use Node.js ${{ matrix.node_version }}
+
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node_version }}
+          node-version: ${{ matrix.node-version }}
           registry-url: 'https://registry.npmjs.org/'
+
       - name: Cache pnpm modules
         uses: actions/cache@v2
         with:
@@ -38,11 +40,28 @@ jobs:
           key: ${{ runner.os }}-node${{ matrix.node-version }}-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-node${{ matrix.node-version }}-
+
       - name: Install pnpm
         uses: pnpm/action-setup@v2.1.0
         with:
           version: latest
           run_install: true
+
+      # We use week in the turbo cache key to keep the cache from infinitely growing
+      - name: Get cache expires mark
+        id: get-week
+        run: echo ::set-output name=WEEK::$(date +%U)
+
+      - name: Turbo Cache
+        id: turbo-cache
+        uses: actions/cache@v2
+        with:
+          path: .turbo
+          key: turbo-${{ github.job }}-${{ runner.os }}-node${{ matrix.node-version }}-${{ github.ref_name }}-${{ steps.get-week.outputs.WEEK }}-${{ github.sha }}
+          restore-keys: |
+            turbo-${{ github.job }}-${{ runner.os }}-node${{ matrix.node-version }}-
+            turbo-${{ github.job }}-${{ runner.os }}-node${{ matrix.node-version }}-${{ github.ref_name }}-${{ steps.get-week.outputs.WEEK }}-
+
       - run: pnpm build
       - run: pnpm tsc --noEmit
       - run: pnpm test
