--- a/examples/bundler-vite-demo/package.json
+++ b/examples/bundler-vite-demo/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "@example/bundler-vite-demo",
+  "private": true,
   "scripts": {
     "dev": "bundler-vite dev",
     "start": "npm run dev"
