--- a/examples/bundler-webpack-demo/package.json
+++ b/examples/bundler-webpack-demo/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "@example/bundler-webpack-demo",
+  "private": true,
   "scripts": {
     "dev": "bundler-webpack dev",
     "start": "npm run dev"
