--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "private": true,
   "scripts": {
     "bootstrap": "esno scripts/bootstrap.ts",
-    "build": "pnpm -r --filter ./packages run build",
-    "build:extra": "pnpm -r --filter ./packages run build:extra",
-    "build:release": "pnpm -r --filter ./packages run build -- --declarationMap false",
+    "build": "esno scripts/turbo.ts --cmd build",
+    "build:extra": "esno scripts/turbo.ts --cmd build:extra",
+    "build:force": "esno scripts/turbo.ts --cmd build --no-cache",
+    "build:release": "esno scripts/turbo.ts --cmd build --no-cache -- --declarationMap false",
     "check:packageFiles": "esno scripts/checkPackageFiles.ts",
-    "dep:update": "npx only-allow pnpm && pnpm up --interactive --latest --recursive",
-    "dev": "pnpm -r --filter ./packages --parallel run dev",
-    "doc:build": "pnpm --filter ./packages/plugin-docs build:extra && umi build",
-    "doc:dev": "esno scripts/startDocsSite.ts",
+    "dep:update": "pnpm up --interactive --latest --recursive",
+    "dev": "esno scripts/turbo.ts --cmd dev",
+    "doc:build": "pnpm doc:deps && umi build",
+    "doc:deps": "esno scripts/turbo.ts --cmd build:extra --scope @umijs/plugin-docs",
+    "doc:dev": "pnpm doc:deps && umi dev",
     "format": "prettier --write .",
     "preinstall": "npx only-allow pnpm",
     "postinstall": "esno scripts/postinstall.ts",
@@ -61,6 +63,7 @@
     "resolve": "^1.22.0",
     "rimraf": "^3.0.2",
     "ts-node": "^10.6.0",
+    "turbo": "^1.1.4",
     "typescript": "^4.6.2",
     "uglify-js": "^3.15.2",
     "umi": "workspace:*",
