--- a/packages/preset-umi/package.json
+++ b/packages/preset-umi/package.json
@@ -46,8 +46,10 @@
   },
   "devDependencies": {
     "@types/body-parser": "1.19.2",
+    "@types/ini": "1.3.31",
     "@types/multer": "1.4.7",
     "body-parser": "1.19.2",
+    "ini": "2.0.0",
     "multer": "1.4.4",
     "vite": "2.8.6"
   },
@@ -60,7 +62,8 @@
   "compiledConfig": {
     "deps": [
       "body-parser",
-      "multer"
+      "multer",
+      "ini"
     ]
   }
 }
