--- a/packages/preset-umi/package.json
+++ b/packages/preset-umi/package.json
@@ -45,6 +45,7 @@
     "regenerator-runtime": "0.13.9"
   },
   "devDependencies": {
+    "@manypkg/get-packages": "1.1.3",
     "@types/body-parser": "1.19.2",
     "@types/ini": "1.3.31",
     "@types/multer": "1.4.7",
@@ -63,6 +64,7 @@
     "deps": [
       "body-parser",
       "multer",
+      "@manypkg/get-packages",
       "ini"
     ]
   }
