ci: use turbo run test (#458)
* wip(test): add `test` script to all packages

* feat(test): support turbo run `test`

* test: check ci stop when test fail

* ci: auto throw error when script fail

* test: revert test case

* feat: add clean turbo cache script

* fix: ubuntu 14 still execute when throw error

* chore: remove test code

* ci: ignore false value in turbo options

* chore: force run ci

--- a/packages/bundler-vite/package.json
+++ b/packages/bundler-vite/package.json
@@ -21,7 +21,8 @@
   "scripts": {
     "build": "pnpm tsc",
     "build:deps": "pnpm esno ../../scripts/bundleDeps.ts",
-    "dev": "pnpm build -- --watch"
+    "dev": "pnpm build -- --watch",
+    "test": "jest -c ../../jest.config.ts"
   },
   "dependencies": {
     "@svgr/core": "6.2.1",
