--- a/packages/plugins/package.json
+++ b/packages/plugins/package.json
@@ -18,7 +18,8 @@
   "scripts": {
     "build": "pnpm tsc",
     "build:deps": "pnpm esno ../../scripts/bundleDeps.ts",
-    "dev": "pnpm build -- --watch"
+    "dev": "pnpm build -- --watch",
+    "test": "jest -c ../../jest.config.ts"
   },
   "dependencies": {
     "@ahooksjs/use-request": "^2.0.0",
