--- a/packages/plugins/package.json
+++ b/packages/plugins/package.json
@@ -31,6 +31,8 @@
     "babel-plugin-import": "^1.13.3",
     "dayjs": "^1.10.8",
     "dva-core": "^2.0.4",
+    "dva-immer": "^1.0.0",
+    "dva-loading": "^3.0.22",
     "event-emitter": "~0.3.5",
     "fast-deep-equal": "3.1.3",
     "lodash": "^4.17.21",
