--- a/packages/bundler-webpack/package.json
+++ b/packages/bundler-webpack/package.json
@@ -44,11 +44,11 @@
     "jest-worker": "26.6.2",
     "node-libs-browser": "2.2.1",
     "normalize-url": "1.9.1",
-    "postcss": "7.0.32",
-    "postcss-flexbugs-fixes": "4.2.1",
-    "postcss-loader": "3.0.0",
-    "postcss-preset-env": "6.7.0",
-    "postcss-safe-parser": "4.0.2",
+    "postcss": "^8.4.8",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-loader": "^6.2.1",
+    "postcss-safe-parser": "^6.0.0",
+    "postcss-preset-env": "^7.4.2",
     "terser": "5.6.0",
     "webpack-chain": "6.5.1"
   },
