fix: CI failure due to path in UT not normalized (#473)
* refactor: 🎨  add Promise to async func

* refactor(utils): BaseGenerator when generate from file this.target use as full filePath

* feat: ✨  umi g page support nested folder and --dir option

* fix(preset-umi): 🐛 fix ci failure due to path not normalized

* fix: 🐛  expect.stringMatching  dont treat \ will in regular expression use stringContaines instead

* chore(github): 💚 enable manually trigger CI  workflow

* chore(ci): 💚 add ci  workflow run when PR opened and synchronized

* docs: ✏️ add missing .github/commit-convention.md

* refactor: 🔥  remove unnessary path.normalize call

* chore: 🔧  CI re-run

* fix:  rename package name

* chore: ⬆️ update pnpm lock file

Co-authored-by: pshu <pishu.spf@antfin.com>

--- a/examples/with-dva/package.json
+++ b/examples/with-dva/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@example/with-unstated",
+  "name": "@example/with-dva",
   "private": true,
   "scripts": {
     "build": "umi build",
