--- a/packages/max/package.json
+++ b/packages/max/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@umijs/pro",
+  "name": "@umijs/max",
   "version": "4.0.0-rc.6",
-  "description": "@umijs/pro",
+  "description": "@umijs/max",
   "homepage": "https://github.com/umijs/umi-next/tree/master/packages/pro#readme",
   "bugs": "https://github.com/umijs/umi-next/issues",
   "repository": {
