--- a/packages/bundler-vite/package.json
+++ b/packages/bundler-vite/package.json
@@ -22,7 +22,7 @@
     "build": "pnpm tsc",
     "build:deps": "pnpm esno ../../scripts/bundleDeps.ts",
     "dev": "pnpm build -- --watch",
-    "test": "jest -c ../../jest.config.ts"
+    "test": "jest -c ../../jest.turbo.config.ts"
   },
   "dependencies": {
     "@svgr/core": "6.2.1",
