--- a/packages/plugins/package.json
+++ b/packages/plugins/package.json
@@ -19,7 +19,7 @@
     "build": "pnpm tsc",
     "build:deps": "pnpm esno ../../scripts/bundleDeps.ts",
     "dev": "pnpm build -- --watch",
-    "test": "jest -c ../../jest.config.ts"
+    "test": "jest -c ../../jest.turbo.config.ts"
   },
   "dependencies": {
     "@ahooksjs/use-request": "^2.0.0",
