--- a/packages/preset-umi/package.json
+++ b/packages/preset-umi/package.json
@@ -21,7 +21,7 @@
     "build": "pnpm tsc",
     "build:deps": "pnpm esno ../../scripts/bundleDeps.ts",
     "dev": "pnpm build -- --watch",
-    "test": "jest -c ../../jest.config.ts"
+    "test": "jest -c ../../jest.turbo.config.ts"
   },
   "dependencies": {
     "@types/multer": "1.4.7",
