fix(api-route): Fix bugs of Vercel adapter (#497)
* fix(api-route): Change output dir from `.output` to `api`

* fix(api-route): mark dependencies in package.json as external when compiling with esbuild

* fix(api-route): remove unused dynamic routes config (Vercel will take care of it)

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /examples/*/.umi
 /examples/*/.umi-production
 /examples/*/.output
+/examples/*/api
 /examples/*/.umi-test
 /examples/*/src/.umi
 /examples/*/src/.umi-production
