--- a/examples/qiankun-slave/package.json
+++ b/examples/qiankun-slave/package.json
@@ -2,11 +2,11 @@
   "name": "@example/qiankun-slave",
   "private": true,
   "scripts": {
-    "dev": "umipro dev",
+    "dev": "umimax dev",
     "start": "npm run dev"
   },
   "dependencies": {
-    "@umijs/pro": "4.0.0-rc.6",
+    "@umijs/max": "4.0.0-rc.6",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   }
