--- a/examples/ant-design-pro/package.json
+++ b/examples/ant-design-pro/package.json
@@ -13,7 +13,7 @@
     "@ant-design/pro-layout": "7.0.1-beta.3",
     "@ant-design/pro-table": "^2.66.4",
     "@antv/l7-react": "^2.3.9",
-    "@umijs/max": "4.0.0-rc.6",
+    "@umijs/max": "4.0.0-canary.20220316.1",
     "ahooks": "^3.1.13",
     "antd": "4.19.2",
     "classnames": "^2.3.1",
