--- a/examples/mfsu-independent/package.json
+++ b/examples/mfsu-independent/package.json
@@ -20,7 +20,7 @@
     "@babel/preset-typescript": "^7.16.7",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
-    "@umijs/mfsu": "4.0.0-rc.6",
+    "@umijs/mfsu": "4.0.0-canary.20220316.1",
     "babel-loader": "^8.2.3",
     "esbuild": "0.14.25",
     "html-webpack-plugin": "^5.5.0",
