--- a/packages/bundler-esbuild/package.json
+++ b/packages/bundler-esbuild/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/bundler-esbuild",
-  "version": "4.0.0-rc.6",
+  "version": "4.0.0-canary.20220316.1",
   "description": "@umijs/bundler-esbuild",
   "homepage": "https://github.com/umijs/umi-next/tree/master/packages/bundler-esbuild#readme",
   "bugs": "https://github.com/umijs/umi-next/issues",
@@ -24,8 +24,8 @@
     "test": "jest -c ../../jest.turbo.config.ts"
   },
   "dependencies": {
-    "@umijs/bundler-utils": "4.0.0-rc.6",
-    "@umijs/utils": "4.0.0-rc.6",
+    "@umijs/bundler-utils": "4.0.0-canary.20220316.1",
+    "@umijs/utils": "4.0.0-canary.20220316.1",
     "enhanced-resolve": "5.9.2",
     "less": "4.1.2",
     "less-plugin-aliases": "^1.0.3",
