refactor: pre-bundle common deps for bundlers (#490)
* refactor(bundler-utils): use single pre-bundle express for bundlers

* refactor(mfsu): use pre-bundle express for mfsu

* refactor(server): use pre-bundle express for server

* refactor(bundler-utils): use single pre-bundle less for bundlers

* fix(bundler-vite): less module not found bug

* fix(bundler-vite): route middleware pending problem

* chore: correct pnpm-lock

* test(esbuild): correct alias case after pre-bundle less

--- a/packages/bundler-esbuild/package.json
+++ b/packages/bundler-esbuild/package.json
@@ -27,15 +27,13 @@
     "@umijs/bundler-utils": "4.0.0-canary.20220316.1",
     "@umijs/utils": "4.0.0-canary.20220316.1",
     "enhanced-resolve": "5.9.2",
-    "less": "4.1.2",
     "less-plugin-aliases": "^1.0.3",
     "postcss": "^8.4.8",
     "postcss-flexbugs-fixes": "5.0.2",
     "postcss-preset-env": "7.4.2"
   },
   "devDependencies": {
-    "@alitajs/postcss-plugin-px2rem": "^0.0.1",
-    "@types/less": "^3.0.3"
+    "@alitajs/postcss-plugin-px2rem": "^0.0.1"
   },
   "publishConfig": {
     "access": "public"
