--- a/packages/bundler-vite/package.json
+++ b/packages/bundler-vite/package.json
@@ -22,6 +22,7 @@
     "build": "pnpm tsc",
     "build:deps": "pnpm esno ../../scripts/bundleDeps.ts",
     "dev": "pnpm build -- --watch",
+    "postinstall": "node scripts/linkDeps.js",
     "test": "jest -c ../../jest.turbo.config.ts"
   },
   "dependencies": {
@@ -37,8 +38,6 @@
     "@types/svgo": "2.6.2",
     "@vitejs/plugin-legacy": "1.7.1",
     "caniuse-lite": "1.0.30001315",
-    "express": "4.17.3",
-    "less": "4.1.2",
     "rollup": "2.70.0",
     "rollup-plugin-copy": "3.4.0",
     "rollup-plugin-visualizer": "5.6.0",
@@ -54,18 +53,16 @@
     "deps": [
       "@vitejs/plugin-legacy",
       "caniuse-lite",
-      "express",
-      "less",
       "rollup-plugin-copy",
       "rollup-plugin-visualizer",
       "vite"
     ],
     "externals": {
       "esbuild": "@umijs/bundler-utils/compiled/esbuild",
-      "express": "$$LOCAL",
+      "express": "@umijs/bundler-utils/compiled/express",
       "fs-extra": "@umijs/utils/compiled/fs-extra",
       "glob": "@umijs/utils/compiled/glob",
-      "less": "$$LOCAL",
+      "less": "@umijs/bundler-utils/compiled/less",
       "resolve": "@umijs/utils/compiled/resolve",
       "vite": "$$LOCAL"
     },
