--- a/packages/bundler-webpack/package.json
+++ b/packages/bundler-webpack/package.json
@@ -48,7 +48,6 @@
   },
   "devDependencies": {
     "@swc/core": "1.2.154",
-    "@types/express": "4.17.13",
     "@types/webpack-sources": "3.2.0",
     "@types/ws": "8.5.3",
     "autoprefixer": "10.4.2",
@@ -58,10 +57,8 @@
     "copy-webpack-plugin": "10.2.4",
     "css-minimizer-webpack-plugin": "3.4.1",
     "cssnano": "5.1.3",
-    "express": "4.17.3",
     "fork-ts-checker-webpack-plugin": "7.2.1",
     "http-proxy-middleware": "2.0.4",
-    "less": "4.1.2",
     "less-loader": "10.2.0",
     "mini-css-extract-plugin": "2.6.0",
     "postcss-flexbugs-fixes": "5.0.2",
@@ -101,10 +98,8 @@
       "cssnano",
       "compression",
       "connect-history-api-fallback",
-      "express",
       "fork-ts-checker-webpack-plugin",
       "http-proxy-middleware",
-      "less",
       "less-loader",
       "mini-css-extract-plugin",
       "postcss-flexbugs-fixes",
@@ -133,9 +128,9 @@
       "@babel/core": "@umijs/bundler-utils/compiled/babel/core",
       "es-module-lexer": "@umijs/bundler-utils/compiled/es-module-lexer",
       "esbuild": "@umijs/bundler-utils/compiled/esbuild",
-      "express": "$$LOCAL",
+      "express": "@umijs/bundler-utils/compiled/express",
       "jest-worker": "jest-worker",
-      "less": "$$LOCAL",
+      "less": "@umijs/bundler-utils/compiled/less",
       "cssnano": "$$LOCAL",
       "postcss": "postcss",
       "tapable": "$$LOCAL",
@@ -174,7 +169,6 @@
       "compression",
       "connect-history-api-fallback",
       "fork-ts-checker-webpack-plugin",
-      "less",
       "less-loader",
       "mini-css-extract-plugin",
       "postcss-flexbugs-fixes",
