--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -20,13 +20,11 @@
     "dev": "pnpm build -- --watch"
   },
   "dependencies": {
+    "@umijs/bundler-utils": "4.0.0-rc.6",
     "history": "5.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-router-dom": "6.2.2"
-  },
-  "devDependencies": {
-    "@types/express": "4.17.13"
   },
   "publishConfig": {
     "access": "public"
