--- a/packages/preset-umi/package.json
+++ b/packages/preset-umi/package.json
@@ -52,6 +52,7 @@
     "@types/multer": "1.4.7",
     "body-parser": "1.19.2",
     "ini": "2.0.0",
+    "joi2types": "1.1.0",
     "multer": "1.4.4",
     "vite": "2.8.6"
   },
@@ -66,7 +67,17 @@
       "body-parser",
       "multer",
       "@manypkg/get-packages",
-      "ini"
+      "ini",
+      "joi2types"
+    ],
+    "externals": {
+      "prettier": "@umijs/utils/compiled/prettier",
+      "lodash": "@umijs/utils/compiled/lodash",
+      "glob": "@umijs/utils/compiled/glob"
+    },
+    "excludeDtsDeps": [
+      "@manypkg/get-packages",
+      "joi2types"
     ]
   }
 }
