--- a/examples/mfsu-circular-dependency/package.json
+++ b/examples/mfsu-circular-dependency/package.json
@@ -10,6 +10,6 @@
     "@types/react-dom": "^17.0.13",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "umi": "4.0.0-canary.20220317.1"
+    "umi": "4.0.0-rc.7"
   }
 }
