--- a/packages/bundler-utils/package.json
+++ b/packages/bundler-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/bundler-utils",
-  "version": "4.0.0-canary.20220317.1",
+  "version": "4.0.0-rc.7",
   "homepage": "https://github.com/umijs/umi-next/tree/master/packages/bundler-utils#readme",
   "bugs": "https://github.com/umijs/umi-next/issues",
   "repository": {
@@ -20,7 +20,7 @@
     "dev": "pnpm build -- --watch"
   },
   "dependencies": {
-    "@umijs/utils": "4.0.0-canary.20220317.1",
+    "@umijs/utils": "4.0.0-rc.7",
     "esbuild": "0.14.27"
   },
   "devDependencies": {
