--- a/packages/preset-umi/package.json
+++ b/packages/preset-umi/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/preset-umi",
-  "version": "4.0.0-canary.20220317.1",
+  "version": "4.0.0-rc.7",
   "description": "@umijs/preset-umi",
   "homepage": "https://github.com/umijs/umi-next/tree/master/packages/preset-umi#readme",
   "bugs": "https://github.com/umijs/umi-next/issues",
@@ -25,15 +25,15 @@
   },
   "dependencies": {
     "@types/multer": "1.4.7",
-    "@umijs/ast": "4.0.0-canary.20220317.1",
-    "@umijs/babel-preset-umi": "4.0.0-canary.20220317.1",
-    "@umijs/bundler-utils": "4.0.0-canary.20220317.1",
-    "@umijs/bundler-vite": "4.0.0-canary.20220317.1",
-    "@umijs/bundler-webpack": "4.0.0-canary.20220317.1",
-    "@umijs/core": "4.0.0-canary.20220317.1",
-    "@umijs/renderer-react": "4.0.0-canary.20220317.1",
-    "@umijs/server": "4.0.0-canary.20220317.1",
-    "@umijs/utils": "4.0.0-canary.20220317.1",
+    "@umijs/ast": "4.0.0-rc.7",
+    "@umijs/babel-preset-umi": "4.0.0-rc.7",
+    "@umijs/bundler-utils": "4.0.0-rc.7",
+    "@umijs/bundler-vite": "4.0.0-rc.7",
+    "@umijs/bundler-webpack": "4.0.0-rc.7",
+    "@umijs/core": "4.0.0-rc.7",
+    "@umijs/renderer-react": "4.0.0-rc.7",
+    "@umijs/server": "4.0.0-rc.7",
+    "@umijs/utils": "4.0.0-rc.7",
     "core-js": "3.21.1",
     "current-script-polyfill": "1.0.0",
     "enhanced-resolve": "5.9.2",
