--- a/examples/with-mobx/package.json
+++ b/examples/with-mobx/package.json
@@ -9,6 +9,6 @@
   "dependencies": {
     "mobx": "^6.4.2",
     "mobx-react": "^7.3.0",
-    "umi": "4.0.0-rc.8"
+    "umi": "4.0.0-canary.20220317.2"
   }
 }
