--- a/examples/with-react-three-fiber/package.json
+++ b/examples/with-react-three-fiber/package.json
@@ -12,6 +12,6 @@
     "@types/three": "^0.138.0",
     "three": "^0.138.3",
     "troika-three-text": "^0.46.3",
-    "umi": "4.0.0-rc.8"
+    "umi": "4.0.0-canary.20220317.2"
   }
 }
