--- a/examples/with-tailwindcss/package.json
+++ b/examples/with-tailwindcss/package.json
@@ -7,8 +7,8 @@
     "start": "npm run dev"
   },
   "dependencies": {
-    "@umijs/plugins": "4.0.0-rc.8",
+    "@umijs/plugins": "4.0.0-canary.20220317.2",
     "tailwindcss": "^3.0.23",
-    "umi": "4.0.0-rc.8"
+    "umi": "4.0.0-canary.20220317.2"
   }
 }
