--- a/examples/with-valtio/package.json
+++ b/examples/with-valtio/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@types/three": "^0.138.0",
-    "umi": "4.0.0-rc.8",
+    "umi": "4.0.0-canary.20220317.2",
     "valtio": "^1.4.0"
   }
 }
