--- a/packages/umi/package.json
+++ b/packages/umi/package.json
@@ -1,6 +1,6 @@
 {
   "name": "umi",
-  "version": "4.0.0-rc.8",
+  "version": "4.0.0-canary.20220317.2",
   "description": "umi",
   "homepage": "https://github.com/umijs/umi-next/tree/master/packages/umi#readme",
   "bugs": "https://github.com/umijs/umi-next/issues",
@@ -33,11 +33,11 @@
     "dev": "pnpm build -- --watch"
   },
   "dependencies": {
-    "@umijs/core": "4.0.0-rc.8",
-    "@umijs/preset-umi": "4.0.0-rc.8",
-    "@umijs/renderer-react": "4.0.0-rc.8",
-    "@umijs/test": "4.0.0-rc.8",
-    "@umijs/utils": "4.0.0-rc.8"
+    "@umijs/core": "4.0.0-canary.20220317.2",
+    "@umijs/preset-umi": "4.0.0-canary.20220317.2",
+    "@umijs/renderer-react": "4.0.0-canary.20220317.2",
+    "@umijs/test": "4.0.0-canary.20220317.2",
+    "@umijs/utils": "4.0.0-canary.20220317.2"
   },
   "publishConfig": {
     "access": "public"
