--- a/packages/plugins/package.json
+++ b/packages/plugins/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "@ahooksjs/use-request": "^2.0.0",
     "@ant-design/icons": "^4.7.0",
-    "@ant-design/pro-layout": "^7.0.1-beta.3",
+    "@ant-design/pro-layout": "^6.34.4",
     "@umijs/bundler-utils": "4.0.0-canary.20220317.2",
     "antd-dayjs-webpack-plugin": "^1.0.6",
     "axios": "^0.26.1",
