performace improve for umi cli (#514)
* perf: ⚡️ 保留 requir.cache, 加速 plugin#apply

* refactor: 🎨 use finally

* chore: ⬆️ add engins.node >=14 for user may need to write plugin under a umi project in js

* refactor: 🎨 register support specify ext and remove ext decision in tranformer due pirates did it for us already

* refactor: 🎨 add ext for plugin require

Co-authored-by: pshu <pishu.spf@antfin.com>

--- a/packages/umi/package.json
+++ b/packages/umi/package.json
@@ -39,6 +39,9 @@
     "@umijs/test": "4.0.0-canary.20220318.1",
     "@umijs/utils": "4.0.0-canary.20220318.1"
   },
+  "engines": {
+    "node": ">=14"
+  },
   "publishConfig": {
     "access": "public"
   },
