feat(max): rename bin file from umimax to max

--- a/examples/ant-design-pro/package.json
+++ b/examples/ant-design-pro/package.json
@@ -2,7 +2,7 @@
   "name": "@example/ant-design-pro",
   "private": true,
   "scripts": {
-    "dev": "umimax dev",
+    "dev": "max dev",
     "start": "npm run dev"
   },
   "dependencies": {
