--- a/examples/qiankun-slave/package.json
+++ b/examples/qiankun-slave/package.json
@@ -2,7 +2,7 @@
   "name": "@example/qiankun-slave",
   "private": true,
   "scripts": {
-    "dev": "umimax dev",
+    "dev": "max dev",
     "start": "npm run dev"
   },
   "dependencies": {
