--- a/packages/preset-umi/package.json
+++ b/packages/preset-umi/package.json
@@ -54,6 +54,7 @@
     "ini": "2.0.0",
     "joi2types": "1.1.0",
     "multer": "1.4.4",
+    "os-locale": "^6.0.2",
     "vite": "2.8.6"
   },
   "publishConfig": {
@@ -68,7 +69,8 @@
       "multer",
       "@manypkg/get-packages",
       "ini",
-      "joi2types"
+      "joi2types",
+      "os-locale"
     ],
     "externals": {
       "prettier": "@umijs/utils/compiled/prettier",
