移除 isPromise 判断  代码更加直接 (#528)
* refactor: 🔥 remove unnessary isPromise

* refactor: 🔥 remove isPromise decision

* chore: ⏪ revert client side change

* test: ✅ BDD style rerange test

* test: ✅  revert to tdd style test case

Co-authored-by: pshu <pishu.spf@antfin.com>

--- a/packages/umi/package.json
+++ b/packages/umi/package.json
@@ -30,7 +30,8 @@
     "build": "pnpm tsc",
     "build:client": "pnpm tsc --project ./tsconfig.client.json",
     "build:deps": "pnpm esno ../../scripts/bundleDeps.ts",
-    "dev": "pnpm build -- --watch"
+    "dev": "pnpm build -- --watch",
+    "test": "jest -c ../../jest.turbo.config.ts"
   },
   "dependencies": {
     "@umijs/core": "4.0.0-canary.20220318.1",
