--- a/examples/qiankun-slave/package.json
+++ b/examples/qiankun-slave/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "app1",
+  "name": "@example/qiankun-slave",
   "private": true,
   "scripts": {
     "dev": "max dev",
     "start": "npm run dev"
   },
   "dependencies": {
-    "@umijs/max": "4.0.0-rc.9",
+    "@umijs/max": "4.0.0-canary.20220325.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   }
