--- a/examples/with-unocss/package.json
+++ b/examples/with-unocss/package.json
@@ -7,9 +7,9 @@
     "start": "npm run dev"
   },
   "dependencies": {
-    "@umijs/plugins": "4.0.0-rc.9",
+    "@umijs/plugins": "4.0.0-canary.20220325.1",
     "@unocss/cli": "^0.29.5",
-    "umi": "4.0.0-rc.9",
+    "umi": "4.0.0-canary.20220325.1",
     "unocss": "^0.29.5"
   }
 }
