--- a/packages/umi/package.json
+++ b/packages/umi/package.json
@@ -23,6 +23,7 @@
     "plugin.js",
     "plugin-utils.d.ts",
     "plugin-utils.js",
+    "prettier.js",
     "test.d.ts",
     "test.js"
   ],
@@ -38,7 +39,9 @@
     "@umijs/preset-umi": "4.0.0-canary.20220325.1",
     "@umijs/renderer-react": "4.0.0-canary.20220325.1",
     "@umijs/test": "4.0.0-canary.20220325.1",
-    "@umijs/utils": "4.0.0-canary.20220325.1"
+    "@umijs/utils": "4.0.0-canary.20220325.1",
+    "prettier-plugin-organize-imports": "^2.3.4",
+    "prettier-plugin-packagejson": "^2.2.16"
   },
   "engines": {
     "node": ">=14"
