--- a/turbo.json
+++ b/turbo.json
@@ -9,6 +9,9 @@
     "build:extra": {
       "cache": false
     },
+    "build:client": {
+      "cache": false
+    },
     "dev": {
       "cache": false
     },
