--- a/packages/bundler-webpack/package.json
+++ b/packages/bundler-webpack/package.json
@@ -36,6 +36,7 @@
     "@svgr/plugin-svgo": "^6.2.0",
     "@types/hapi__joi": "17.1.8",
     "@umijs/babel-preset-umi": "4.0.0-canary.20220325.1",
+    "@umijs/bundler-utils": "4.0.0-canary.20220325.1",
     "@umijs/mfsu": "4.0.0-canary.20220325.1",
     "@umijs/utils": "4.0.0-canary.20220325.1",
     "css-loader": "6.7.1",
