feat(preset-umi): ui devtool with /__umi/

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@
 /packages/*/src/**/fixtures/*/.umi
 /packages/*/src/**/fixtures/*/.umi-production
 /packages/plugin-docs/client/theme-doc/tailwind.out.css
+/packages/preset-umi/devToolApp/.umi
+/packages/preset-umi/devToolApp/.umi-production
+/packages/preset-umi/devToolApp/node_modules
 /.umi
 /.mfsu
 /.umi-production
