--- a/packages/preset-umi/package.json
+++ b/packages/preset-umi/package.json
@@ -15,7 +15,8 @@
     "assets",
     "dist",
     "templates",
-    "compiled"
+    "compiled",
+    "devToolAppDist"
   ],
   "scripts": {
     "build": "pnpm tsc",
