fix(preset-umi): tsc

--- a/packages/preset-umi/tsconfig.json
+++ b/packages/preset-umi/tsconfig.json
@@ -4,6 +4,5 @@
     "outDir": "./dist",
     "rootDir": "./src"
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "devToolApp"]
+  "include": ["src"]
 }
