test: add e2e case (#548)
* test: add e2e case

* chore: tsconfig add e2e file exclude

Co-authored-by: 谢仁洪 <xierenhong@renrenche.com>

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "setup:webstorm": "esno scripts/setupWebStorm.ts",
     "test": "esno scripts/turbo.ts --cmd test --parallel",
     "test:clean": "esno scripts/turbo.ts --cmd test --no-cache --parallel -- --clearCache",
+    "test:e2e": "jest --config jest.e2e.config.ts",
     "tsc:check": "tsc --noEmit",
     "turbo:clean": "rimraf .turbo"
   },
@@ -50,13 +51,16 @@
     "@vercel/ncc": "0.33.3",
     "dts-packer": "^0.0.3",
     "esno": "^0.14.1",
+    "expect-playwright": "^0.8.0",
     "git-repo-info": "^2.1.1",
     "husky": "^7.0.4",
     "jest": "^27.5.1",
+    "jest-playwright-preset": "^1.7.0",
     "lerna": "^4.0.0",
     "lint-staged": "^12.3.7",
     "matcher": "^5.0.0",
     "only-allow": "^1.1.0",
+    "playwright-chromium": "^1.20.1",
     "prettier": "^2.6.0",
     "prettier-plugin-organize-imports": "^2.3.4",
     "prettier-plugin-packagejson": "^2.2.16",
