--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,8 @@
 *.tsbuildinfo
 .jest-cache
 .swc
+/test/**/fixtures/*/dist
+/test/**/fixtures/*/.umi
+/test/**/fixtures/*/.umi-production
+/test/**/fixtures/*/src/.umi
+/test/**/fixtures/*/src/.umi-production
