--- a/examples/bundler-vite-demo/package.json
+++ b/examples/bundler-vite-demo/package.json
@@ -8,9 +8,9 @@
   "dependencies": {
     "@types/react": "^17.0.41",
     "@types/react-dom": "^17.0.14",
-    "@umijs/bundler-vite": "4.0.0-canary.20220325.1",
+    "@umijs/bundler-vite": "4.0.0-rc.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "umi": "4.0.0-canary.20220325.1"
+    "umi": "4.0.0-rc.10"
   }
 }
