--- a/examples/with-sass/package.json
+++ b/examples/with-sass/package.json
@@ -7,7 +7,7 @@
     "start": "npm run dev"
   },
   "dependencies": {
-    "umi": "4.0.0-canary.20220325.1"
+    "umi": "4.0.0-rc.10"
   },
   "devDependencies": {
     "@types/react": "^17.0.41",
