--- a/examples/with-styled-components/package.json
+++ b/examples/with-styled-components/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "styled-components": "^5.3.3",
-    "umi": "4.0.0-canary.20220325.1"
+    "umi": "4.0.0-rc.10"
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.24"
