feat(lint): add umi lint feature (#536)
* chore(lint): initialize lint package

* chore(lint): add rule sample files

* feat(lint): add legacy fabric rules

* feat(lint): add legacy eslint config

* refactor(lint): always use numeric value for fabric rules

* feat(lint): support to disable type aware related rules by env

* feat(lint): patch resolve logic with modern-module-resolution

* chore(lint): add deps for eslint config

* chore(lint): add eslint recommend

* feat: add eslint recommended

* feat: add eslint recommended overrides

* feat(lint): migrate stylelint config from fabric

* feat(lint): create base linter

* feat(lint): implement style linter base on stylelint

* chore(lint): add stylelint example

* refactor(lint): move syntax option to config for stylelint

* feat(lint): add type exports

* feat(lint): support to specific resolve dir for linter

* refactor(lint): always use linter config from user

* chore(lint): install stylelint in example

* refactor(lint): correct bin path logic

* feat(preset-umi): register lint command

* feat(umi): export lint configs

* feat(max): export lint configs

* refactor(lint): use resolved plugins for stylelint config

* chore(lint): move example to root

* feat(lint): add example for lint

* feat(lint): fix doc

* feat(lint): fix lint for ts

* feat(lint): add glob split

* feat(lint): add css-in-js

* feat(lint): add cssinjs example

* feat(lint): delete test docs

* feat(lint): fix config

* chore: correct pnpm lock file

* refactor(lint): use babel-preset-umi for eslint config

* refactor(lint): remove useless ignore files in stylelint config

* feat: export legacy eslint config from umi

* chore(lint): remove empty test file

* feat(lint): fix docs

* feat(lint): add test

* refactor: clear lint config exports

* refactor(lint): remove useless linter resolve option

* feat(lint): pre-bundle deps for stylelint config

* refactor(lint): remove type aware related logic

* chore: correct lint package version

* cho

--- a/packages/max/package.json
+++ b/packages/max/package.json
@@ -23,7 +23,9 @@
     "plugin-utils.js",
     "prettier.js",
     "test.d.ts",
-    "test.js"
+    "test.js",
+    "eslint.js",
+    "stylelint.js"
   ],
   "scripts": {
     "build": "pnpm tsc",
@@ -31,6 +33,7 @@
     "dev": "pnpm build -- --watch"
   },
   "dependencies": {
+    "@umijs/lint": "4.0.0-rc.10",
     "@umijs/plugins": "4.0.0-rc.10",
     "antd": "^4.19.3",
     "umi": "4.0.0-rc.10"
