--- a/packages/renderer-mpa/package.json
+++ b/packages/renderer-mpa/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/renderer-mpa",
-  "version": "3.5.22",
+  "version": "3.5.23",
   "description": "@umijs/renderer-mpa",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -28,7 +28,7 @@
   "dependencies": {
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
-    "@umijs/runtime": "3.5.22"
+    "@umijs/runtime": "^3.5.23"
   },
   "peerDependencies": {
     "react": "16.x || 17.x",
