build: upgrade turbo (#587)

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dep:update": "pnpm up --interactive --latest --recursive",
     "dev": "esno scripts/turbo.ts --cmd dev",
     "doc:build": "pnpm doc:deps && umi build",
-    "doc:deps": "esno scripts/turbo.ts --cmd build:extra --scope @umijs/plugin-docs",
+    "doc:deps": "esno scripts/turbo.ts --cmd build:extra --filter @umijs/plugin-docs...",
     "doc:dev": "pnpm doc:deps && umi dev",
     "format": "prettier --write .",
     "preinstall": "npx only-allow pnpm",
@@ -70,7 +70,7 @@
     "resolve": "^1.22.0",
     "rimraf": "^3.0.2",
     "ts-node": "^10.7.0",
-    "turbo": "^1.1.9",
+    "turbo": "^1.2.1",
     "typescript": "^4.6.2",
     "uglify-js": "^3.15.3",
     "umi": "workspace:*",
