fix(bundler-utils): unicode regex phantom dep (#563)
* fix(bundler-utils): to avoid use phantom unicode dep

* build: add babel dep validate logic in bundle dep script

* chore(build): correct ignore comment in build dep script

Co-authored-by: chencheng (云谦) <sorrycc@gmail.com>

--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     ]
   },
   "devDependencies": {
+    "@pnpm/lockfile-file": "^5.0.0",
+    "@pnpm/logger": "^4.0.0",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.22",
     "@types/react": "^17.0.41",
