dep: upgrade more deps

--- a/packages/preset-umi/compiled/ini/package.json
+++ b/packages/preset-umi/compiled/ini/package.json
@@ -1,1 +1,1 @@
-{"name":"ini","author":"Isaac Z. Schlueter <i@izs.me> (http://blog.izs.me/)","license":"ISC"}
+{"name":"ini","author":"GitHub Inc.","license":"ISC"}
