--- a/packages/bundler-webpack/package.json
+++ b/packages/bundler-webpack/package.json
@@ -57,15 +57,15 @@
     "connect-history-api-fallback": "1.6.0",
     "copy-webpack-plugin": "10.2.4",
     "css-minimizer-webpack-plugin": "3.4.1",
-    "cssnano": "5.1.5",
-    "fork-ts-checker-webpack-plugin": "7.2.1",
+    "cssnano": "5.1.7",
+    "fork-ts-checker-webpack-plugin": "7.2.4",
     "http-proxy-middleware": "2.0.4",
     "less-loader": "10.2.0",
     "mini-css-extract-plugin": "2.6.0",
     "postcss-flexbugs-fixes": "5.0.2",
     "postcss-loader": "6.2.1",
     "purgecss-webpack-plugin": "4.1.3",
-    "react-refresh": "0.11.0",
+    "react-refresh": "0.12.0",
     "sass-loader": "12.6.0",
     "schema-utils": "4.0.0",
     "speed-measure-webpack-plugin": "1.5.0",
@@ -175,6 +175,7 @@
       "postcss-flexbugs-fixes",
       "postcss-loader",
       "purgecss-webpack-plugin",
+      "react-refresh",
       "sass-loader",
       "speed-measure-webpack-plugin",
       "style-loader",
