--- a/examples/libs/package.json
+++ b/examples/libs/package.json
@@ -15,6 +15,6 @@
     "redux": "^4.1.2",
     "swiper": "^8.1.0",
     "swr": "1.3.0",
-    "umi": "4.0.0-rc.11"
+    "umi": "4.0.0-canary.20220412.1"
   }
 }
