--- a/examples/lint/package.json
+++ b/examples/lint/package.json
@@ -10,6 +10,7 @@
     "lint:style-fix": "umi lint --stylelint-only --fix",
     "start": "npm run dev"
   },
+  "dependencies": {},
   "devDependencies": {
     "eslint": "^8.13.0",
     "stylelint": "^14.6.1",
