--- a/examples/with-vanilla-extract/package.json
+++ b/examples/with-vanilla-extract/package.json
@@ -10,6 +10,6 @@
     "@vanilla-extract/babel-plugin": "^1.1.5",
     "@vanilla-extract/css": "^1.6.8",
     "@vanilla-extract/webpack-plugin": "^2.1.7",
-    "umi": "4.0.0-rc.11"
+    "umi": "4.0.0-canary.20220412.1"
   }
 }
