--- a/packages/max/package.json
+++ b/packages/max/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/max",
-  "version": "4.0.0-rc.11",
+  "version": "4.0.0-canary.20220412.1",
   "description": "@umijs/max",
   "homepage": "https://github.com/umijs/umi-next/tree/master/packages/pro#readme",
   "bugs": "https://github.com/umijs/umi-next/issues",
@@ -33,10 +33,10 @@
     "dev": "pnpm build -- --watch"
   },
   "dependencies": {
-    "@umijs/lint": "4.0.0-rc.11",
-    "@umijs/plugins": "4.0.0-rc.11",
+    "@umijs/lint": "4.0.0-canary.20220412.1",
+    "@umijs/plugins": "4.0.0-canary.20220412.1",
     "antd": "^4.19.5",
-    "umi": "4.0.0-rc.11"
+    "umi": "4.0.0-canary.20220412.1"
   },
   "publishConfig": {
     "access": "public"
