--- a/packages/umi/package.json
+++ b/packages/umi/package.json
@@ -1,6 +1,6 @@
 {
   "name": "umi",
-  "version": "4.0.0-rc.11",
+  "version": "4.0.0-canary.20220412.1",
   "description": "umi",
   "homepage": "https://github.com/umijs/umi-next/tree/master/packages/umi#readme",
   "bugs": "https://github.com/umijs/umi-next/issues",
@@ -37,12 +37,12 @@
     "test": "jest -c ../../jest.turbo.config.ts"
   },
   "dependencies": {
-    "@umijs/core": "4.0.0-rc.11",
-    "@umijs/lint": "4.0.0-rc.11",
-    "@umijs/preset-umi": "4.0.0-rc.11",
-    "@umijs/renderer-react": "4.0.0-rc.11",
-    "@umijs/test": "4.0.0-rc.11",
-    "@umijs/utils": "4.0.0-rc.11",
+    "@umijs/core": "4.0.0-canary.20220412.1",
+    "@umijs/lint": "4.0.0-canary.20220412.1",
+    "@umijs/preset-umi": "4.0.0-canary.20220412.1",
+    "@umijs/renderer-react": "4.0.0-canary.20220412.1",
+    "@umijs/test": "4.0.0-canary.20220412.1",
+    "@umijs/utils": "4.0.0-canary.20220412.1",
     "prettier-plugin-organize-imports": "^2.3.4",
     "prettier-plugin-packagejson": "^2.2.17"
   },
