refactor(max): built-in stylelint & eslint in max (#606)

--- a/packages/max/package.json
+++ b/packages/max/package.json
@@ -36,6 +36,8 @@
     "@umijs/lint": "4.0.0-canary.20220412.3",
     "@umijs/plugins": "4.0.0-canary.20220412.3",
     "antd": "^4.19.5",
+    "eslint": "8.13.0",
+    "stylelint": "14.6.1",
     "umi": "4.0.0-canary.20220412.3"
   },
   "publishConfig": {
