feat(preset-umi): add command preview (#607)
Co-authored-by: xierenhong <renhong.xrh@gmail.com>

--- a/examples/bigfish/package.json
+++ b/examples/bigfish/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "build": "max build",
     "dev": "max dev",
+    "preview": "max preview --port 9527",
     "start": "npm run dev"
   },
   "dependencies": {
