--- a/examples/mfsu-independent/package.json
+++ b/examples/mfsu-independent/package.json
@@ -20,7 +20,7 @@
     "@babel/preset-typescript": "^7.16.7",
     "@types/react": "^18.0.1",
     "@types/react-dom": "^18.0.0",
-    "@umijs/mfsu": "4.0.0-canary.20220412.3",
+    "@umijs/mfsu": "4.0.0-rc.12",
     "babel-loader": "^8.2.4",
     "esbuild": "0.14.35",
     "html-webpack-plugin": "^5.5.0",
