--- a/examples/with-react-three-fiber/package.json
+++ b/examples/with-react-three-fiber/package.json
@@ -12,6 +12,6 @@
     "@types/three": "^0.139.0",
     "three": "^0.139.2",
     "troika-three-text": "^0.46.4",
-    "umi": "4.0.0-canary.20220412.3"
+    "umi": "4.0.0-rc.12"
   }
 }
