--- a/examples/with-redux-toolkit/package.json
+++ b/examples/with-redux-toolkit/package.json
@@ -9,6 +9,6 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
     "react-redux": "^7.2.8",
-    "umi": "4.0.0-canary.20220412.3"
+    "umi": "4.0.0-rc.12"
   }
 }
