--- a/examples/with-rematch/package.json
+++ b/examples/with-rematch/package.json
@@ -9,6 +9,6 @@
   "dependencies": {
     "@rematch/core": "^2.2.0",
     "react-redux": "^7.2.8",
-    "umi": "4.0.0-canary.20220412.3"
+    "umi": "4.0.0-rc.12"
   }
 }
