--- a/packages/max/package.json
+++ b/packages/max/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/max",
-  "version": "4.0.0-canary.20220412.3",
+  "version": "4.0.0-rc.12",
   "description": "@umijs/max",
   "homepage": "https://github.com/umijs/umi-next/tree/master/packages/pro#readme",
   "bugs": "https://github.com/umijs/umi-next/issues",
@@ -33,12 +33,12 @@
     "dev": "pnpm build -- --watch"
   },
   "dependencies": {
-    "@umijs/lint": "4.0.0-canary.20220412.3",
-    "@umijs/plugins": "4.0.0-canary.20220412.3",
+    "@umijs/lint": "4.0.0-rc.12",
+    "@umijs/plugins": "4.0.0-rc.12",
     "antd": "^4.19.5",
     "eslint": "8.13.0",
     "stylelint": "14.6.1",
-    "umi": "4.0.0-canary.20220412.3"
+    "umi": "4.0.0-rc.12"
   },
   "publishConfig": {
     "access": "public"
