feat: umi/client browser compatible (#609)

--- a/packages/umi/tsconfig.client.json
+++ b/packages/umi/tsconfig.client.json
@@ -2,6 +2,7 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "declarationMap": false,
+    "target": "ES5",
     "module": "esnext",
     "outDir": "./client",
     "rootDir": "./src"
