--- a/examples/bigfish/package.json
+++ b/examples/bigfish/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
-    "@umijs/max": "4.0.0-rc.12",
+    "@umijs/max": "4.0.0-canary.20220414.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   }
