--- a/packages/ast/package.json
+++ b/packages/ast/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/ast",
-  "version": "4.0.0-rc.12",
+  "version": "4.0.0-canary.20220414.1",
   "description": "@umijs/ast",
   "homepage": "https://github.com/umijs/umi-next/tree/master/packages/ast#readme",
   "bugs": "https://github.com/umijs/umi-next/issues",
@@ -21,7 +21,7 @@
     "test": "jest -c ../../jest.turbo.config.ts"
   },
   "dependencies": {
-    "@umijs/bundler-utils": "4.0.0-rc.12"
+    "@umijs/bundler-utils": "4.0.0-canary.20220414.1"
   },
   "publishConfig": {
     "access": "public"
