--- a/packages/create-umi/package.json
+++ b/packages/create-umi/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-umi",
-  "version": "4.0.0-rc.12",
+  "version": "4.0.0-canary.20220414.1",
   "description": "create-umi",
   "homepage": "https://github.com/umijs/umi-next/tree/master/packages/create-umi#readme",
   "bugs": "https://github.com/umijs/umi-next/issues",
@@ -25,7 +25,7 @@
     "test": "jest -c ../../jest.turbo.config.ts"
   },
   "dependencies": {
-    "@umijs/utils": "4.0.0-rc.12"
+    "@umijs/utils": "4.0.0-canary.20220414.1"
   },
   "publishConfig": {
     "access": "public"
