fix(plugin-docs): fix docs children & update plugin (#631)

--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "doc:build": "pnpm doc:deps && umi build",
     "doc:deps": "esno scripts/turbo.ts --cmd build:extra --filter @umijs/plugin-docs...",
     "doc:dev": "pnpm doc:deps && umi dev",
+    "doc:format": "pnpm format:docs && pnpm format:plugin-docs",
     "format": "prettier --write .",
+    "format:docs": "prettier 'docs/**/*.{md,mdx}' --write --ignore-path .gitignore --ignore-unknown",
+    "format:plugin-docs": "prettier 'packages/plugin-docs/**/*' --write --ignore-unknown",
     "preinstall": "npx only-allow pnpm",
     "postinstall": "esno scripts/postinstall.ts",
     "jest": "jest",
