feat(plugin-docs): support code highlight & update styles (#636)
* feat(plugin-docs): code prettier & udpate styles

* build(plugin-docs): support remark-gfm compile

* style(plugin-docs): update <li /> font style

--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "dep:update": "pnpm up --interactive --latest --recursive",
     "dev": "esno scripts/turbo.ts --cmd dev",
     "doc:build": "pnpm doc:deps && umi build",
-    "doc:deps": "esno scripts/turbo.ts --cmd build:extra --filter @umijs/plugin-docs...",
-    "doc:dev": "pnpm doc:deps && umi dev",
-    "doc:format": "pnpm format:docs && pnpm format:plugin-docs",
+    "doc:deps": "pnpm doc:deps-ts && pnpm doc:deps-extra",
+    "doc:deps-extra": "esno scripts/turbo.ts --cmd build:extra --filter @umijs/plugin-docs...",
+    "doc:deps-ts": "esno scripts/turbo.ts --cmd build --filter @umijs/plugin-docs...",
+    "doc:dev": "umi dev",
     "format": "prettier --write .",
     "format:docs": "prettier 'docs/**/*.{md,mdx}' --write --ignore-path .gitignore --ignore-unknown",
     "format:plugin-docs": "prettier 'packages/plugin-docs/**/*' --write --ignore-unknown",
